--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Yizheng's Blog
 author: Yizheng Huang
 email: huangyz0918@gmail.com
 description: Hard work always pays off.
-url: "http://blog.huangyz.name/" 
+url: "https://mgurg.github.io/" 
 
 # Build settings
 remote_theme: huangyz0918/moving
