--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Python 
 author: Michał
-email: donotemailme@gmail.com
+email:
 description: notatki z nauki
 url: "https://mgurg.github.io" 
 
@@ -12,12 +12,12 @@ plugins:
 
 moving:
   about_you: notatki z nauki
-  avatar_url: https://i.loli.net/2019/09/07/wiBh3uMWRUaLX5K.png 
+  avatar_url: https://roboticsbook.com/mgurg.jpg
   date_format: "%b %d"
   back_to: "Index"
   social_links:
     rss: RSS
     github:  mgurg
     facebook: 
-    linkedin: 
+    linkedin: michal-gurgul
 
